--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,9 +1,9 @@
 @import "reset.css";
-body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 .status-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
     padding: 5px 3px;
