--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,18 @@
 @import "reset.css";
 @import "variables.css";
+
+/* Components */
+
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+
+/* Screens */
+
 @import "screens/login.css";
+@import "screens/friends.css";
 body {
+    color: #2e363e;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
