--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: var(--horizontal-space);
+    margin-bottom: 15px;
     margin-top: 20px;
 }
 
