--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -16,3 +16,16 @@
     position: relative;
     margin-left: 25px;
 }
+
+@keyframes rotateCog {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotatez(360deg);
+    }
+}
+
+.screen-header__icons .fa-cog:hover {
+    animation: rotateCog 1s linear infinite;
+}
