Some of things are changed
changed friend and chat html&css

--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -13,6 +13,7 @@
     height: 70px;
     border-radius: 30px;
     margin-right: 20px;
+    object-fit: cover
 }
 
 .user-component__title {
@@ -29,12 +30,14 @@
 .user-component__avatar--xl {
     width: 80px;
     height: 80px;
+    object-fit: cover
 }
 
 .user-component__avatar--sm {
     width: 60px;
     height: 60px;
     border-radius: 25px;
+    object-fit: cover
 }
 
 .user-component__title--not-bold {
@@ -51,4 +54,9 @@
 .user-component__time {
     margin-bottom: 5px;
     display: block;
+}
+
+.user-component__chat,
+.user-component__friends {
+    margin-bottom: 10px;
 }
