--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@
 @import "screens/more.css";
 @import "screens/settings.css";
 @import "screens/chat.css";
+*::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     color: #2e363e;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
