Many things are changed
1. English are translated with Korean
2. Each of the people chat are changed
3. Some of icons are added

--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 99;
     height: 100vh;
-    background-color: var(--yellow);
+    background-color: rgb(213, 247, 164);
     width: 100vw;
     display: flex;
     justify-content: center;
