--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -11,12 +11,13 @@
 }
 
 .more-suggestions {
-    margin-top: 50px;
+    margin-top: 40px;
     border-top: var(--main-border);
     padding-top: 40px;
 }
 
 .more-suggestions__title {
+    margin-top: -20px;
     margin-bottom: 30px;
 }
 
@@ -35,7 +36,7 @@
     width: 60px;
     height: 60px;
     border-radius: 10px;
-    background-color: var(--yellow);
+    background-color: rgb(180, 218, 129);
     display: flex;
     justify-content: center;
     align-items: center;
